--- a/基本算法实现.md
+++ b/基本算法实现.md
@@ -301,12 +301,7 @@ public class BiTreeUtil {
      */
     private static <T> BiTree<T> searchValInBST(final BiTree<T> target, BiTree<T> root, BiTree<T> pre, boolean[] found) {
         if (root == null) {
-            if (pre != null) {
-                return pre;
-            } else {
-                //当前树是空的，无根节点
-                return null;
-            }
+         	return pre;
         }
         if (root.compareTo(target) == 0) {
             found[0] = true;
@@ -782,23 +777,16 @@ public class SortUtils {
         //标记不大于种子的数组索引
         int left = i - 1;
         Random random = new Random();
-        /**
-         * 种子是随机选择的,由于在迭代的过程中，种子所在索引可能会被覆盖。所以需要在迭代过策划那个中
-         * 动态确定种子所在索引的位置。
-         */
+        //随机选择一个索引作为比较值，替换到数组末尾
         int seedIndex = i + random.nextInt(j - i + 1);
-        ComparableNode seed = nodes[seedIndex];
+        swapNodes(nodes,seedIndex,j);
+        ComparableNode seed =nodes[j];
         for (int k = i; k <= j; k++) {
-            if (nodes[k].compareTo(seed) <= 0) {
+           	if(nodes[k].compareTo(seed)<=0){
                 left++;
-                swapNodes(nodes, k, left);
-                //确定种子的
-                if (nodes[left].compareTo(seed) == 0) {
-                    seedIndex = left;
-                }
+                swapNodes(nodes,left,k);
             }
         }
-        swapNodes(nodes, seedIndex, left);
         quickSort(nodes, i, left - 1);
         quickSort(nodes, left + 1, j);
     }
@@ -1187,9 +1175,8 @@ public class MaxContinuousSum {
 
     /**
      * 动态规划方法的实现，基本思想：
-     * 定义opt(n)为目标解，基本子问题划分思想，对于opt(i),如果元素nums[i]不加入序列和计算，那么opt(i)=opt(i-1)；
-     * 如果加入序列和计算，那么opt(i)的值应该是opt(i-1)序列和加上最右边界（不包含）开始一直到i序列的和sum，
-     * 只有sum>0或者sum比opt(i-1)大的情况下才有意义。
+     * 全局最优和局部最优问题，定义opt(i)表示以nums[i]结尾的最大连续子序列和的最大值，
+     * 那么目标解就是Max(opt(i))。而opt(i)=nums[i]+Math.max(0,opt(i-1))
      *
      * @param nums
      * @return
@@ -1198,33 +1185,14 @@ public class MaxContinuousSum {
         int maxSum = nums[0];
         int n = nums.length;
         int sum = nums[0];
-        for (int i = 1; i < n; i++) {
-            maxSum = Math.max(maxSum, sum);
-            if (sum < 0) {
-                sum = nums[i];
-                maxSum = Math.max(maxSum, nums[i]);
-            } else {
-                sum += nums[i];
-                maxSum = Math.max(maxSum, sum);
-            }
+        for(int i=1;i<nums.length();i++){
+            sum=nums[i]+Math.max(0,sum);
+            maxSum=Math.max(sum,maxSum);
         }
         return maxSum;
     }
 
-    public static int refDpMethod(int[] arr) {
-        int n = arr.length;
-        int sum = arr[0];
-        int max = arr[0];
-        for (int i = 1; i < n; i++) {
-            sum = Math.max(sum + arr[i], arr[i]);
-            if (sum >= max) {
-                max = sum;
-            }
-        }
-
-        return max;
-
-    }
+  
 
     /**
      * 产生伪随机数，数字分布范围在lowerBound到upperBound之间（都是包含）
@@ -1281,9 +1249,9 @@ public class WordUtil {
             for (j = 1; j <= n; j++) {
                 int matchDist = matrix[i - 1][j - 1] + wordDiff.characterMatchDist(i - 1, word1.charAt(i - 1), j - 1, word2.charAt(j - 1));
                 //字符word1.charAt(i-1)不参与匹配
-                int leftUnMatch = matrix[i][j - 1] + wordDiff.unMatchDist(i - 1, word1.charAt(i - 1));
+                int leftUnMatch = matrix[i-1][j] + wordDiff.unMatchDist(i - 1, word1.charAt(i - 1));
                 //字符word2.charAt(j-1)不参与匹配
-                int rightUnMatch = matrix[i - 1][j] + wordDiff.unMatchDist(j - 1, word2.charAt(j - 1));
+                int rightUnMatch = matrix[i][j-1] + wordDiff.unMatchDist(j - 1, word2.charAt(j - 1));
                 matrix[i][j] = Math.min(matchDist, Math.min(leftUnMatch, rightUnMatch));
             }
         }
